<resources>
    <string name="app_name">YeeLLDiyCode</string>

    <!--main-->
    <string name="main_navigation_my_posts">我的帖子</string>
    <string name="main_navigation_my_comment">我的评论</string>
    <string name="main_navigation_my_share">我的分享</string>
    <string name="main_navigation_my_collection">我的收藏</string>
    <string name="main_navigation_about_me">关于我们</string>
    <string name="main_navigation_settings">软件设置</string>
    <string name="main_toolbar_search">search</string>
    <string name="main_toolbar_settings">settings</string>
    <string name="main_toolbar_message">message</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
</resources>
